--- a/site/repertoriu_ro.html
+++ b/site/repertoriu_ro.html
@@ -52,7 +52,7 @@
                 <div class="separator"><hr></div>
                 <div class="dans">
                     <div class="titlu">Sorocuri</div>
-                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> bărbătesc din câmpia Banatului care cuprinde bătăi de palme în cizme, sărituri și deplasări surprinzătoare în spațiu.</div>
                     <div class="galerie">
                             <a href="img/repertoriu/Sorocuri 1.jpg" data-lightbox="sorocuri"><img src="img/repertoriu/Sorocuri 1.jpg" /></a>
                             <a href="img/repertoriu/Sorocuri 2.jpg" data-lightbox="sorocuri"><img src="img/repertoriu/Sorocuri 2.jpg" /></a>
@@ -63,7 +63,7 @@
                 <div class="separator"><hr></div>
                 <div class="dans">
                     <div class="titlu">Munte</div>
-                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="descriere" style="padding: 60px 0;"><span style="margin-left:2em">Dans</span> din zona Banatului de munte, care prin ritmurile lui alerte, prin tumultul creat de învârtirile continui ale fetelor pe sub brațele băieților, prin vigoarea mișcărilor specific bărbătești, redă temperamentul aprins al locuitorilor de la munte.</div>
                     <div class="galerie">
                             <a href="img/repertoriu/Munte 1.jpg" data-lightbox="munte"><img src="img/repertoriu/Munte 1.jpg" /></a>
                             <a href="img/repertoriu/Munte 2.jpg" data-lightbox="munte"><img src="img/repertoriu/Munte 2.jpg" /></a>
@@ -74,7 +74,7 @@
                 <div class="separator"><hr></div>
                 <div class="dans">
                     <div class="titlu">Brâuri</div>
-                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="descriere" style="padding: 75px 0;"><span style="margin-left:2em">Dans</span> bărbătesc din zona de munte a Banatului, dansuri de păstori care s-au păstrat până în zilele noastre, cele mai reprezentative constituind suita căreia îi dă viață scenică grupul nostru.</div>
                     <div class="galerie">
                             <a href="img/repertoriu/Briuri 1.jpg" data-lightbox="briuri"><img src="img/repertoriu/Briuri 1.jpg" /></a>
                             <a href="img/repertoriu/Briuri 2.jpg" data-lightbox="briuri"><img src="img/repertoriu/Briuri 2.jpg" /></a>
@@ -85,7 +85,7 @@
                 <div class="separator"><hr></div>
                 <div class="dans">
                     <div class="titlu">Ardelene</div>
-                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="descriere" style="padding: 85px 0;"><span style="margin-left:2em">Dans</span> dans din Valea Almăjului, regiune situată în sudul Banatului. Dansul este caracterizat de mulțimea piruetelor executate de fete.</div>
                     <div class="galerie">
                             <a href="img/repertoriu/Ardelene 1.jpg" data-lightbox="ardelene"><img src="img/repertoriu/Ardelene 1.jpg" /></a>
                             <a href="img/repertoriu/Ardelene 2.jpg" data-lightbox="ardelene"><img src="img/repertoriu/Ardelene 2.jpg" /></a>
@@ -96,18 +96,18 @@
                 <div class="separator"><hr></div>
                 <div class="dans">
                     <div class="titlu">Iedera</div>
-                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din centrul Banatului, remarcabil prin momentele executate de un băiat cu doua fete.</div>
                     <div class="galerie">
+                            <a href="img/repertoriu/Iedera 4.jpg" data-lightbox="iedera"><img src="img/repertoriu/Iedera 4.jpg" /></a>
                             <a href="img/repertoriu/Iedera 1.jpg" data-lightbox="iedera"><img src="img/repertoriu/Iedera 1.jpg" /></a>
                             <a href="img/repertoriu/Iedera 2.jpg" data-lightbox="iedera"><img src="img/repertoriu/Iedera 2.jpg" /></a>
                             <a href="img/repertoriu/Iedera 3.jpg" data-lightbox="iedera"><img src="img/repertoriu/Iedera 3.jpg" /></a>
-                            <a href="img/repertoriu/Iedera 4.jpg" data-lightbox="iedera"><img src="img/repertoriu/Iedera 4.jpg" /></a>
                     </div>
                 </div>
                 <div class="separator"><hr></div>
                 <div class="dans">
                     <div class="titlu">Valea Bistrei</div>
-                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="descriere" style="padding: 80px 0;"><span style="margin-left:2em">Dans</span> de pe Valea Bistrei, regiune situată în zona de munte a Banatului, caracterizat printr-o eleganță aparte, desfășurat într-un ritm alert, cerând dansatorilor o maiestrie deosebită.</div>
                     <div class="galerie">
                             <a href="img/repertoriu/Valea Bistrei 1.jpg" data-lightbox="vb"><img src="img/repertoriu/Valea Bistrei 1.jpg" /></a>
                             <a href="img/repertoriu/Valea Bistrei 2.jpg" data-lightbox="vb"><img src="img/repertoriu/Valea Bistrei 2.jpg" /></a>
@@ -118,7 +118,7 @@
                 <div class="separator"><hr></div>
                 <div class="dans">
                     <div class="titlu">Valea Timișului</div>
-                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="descriere" style="padding: 80px 0;"><span style="margin-left:2em">Dans</span> de pe Valea Timișului, regiune situată în zona de munte a Banatului, caracterizată prin ritmul alert al piruetelor precum și prin vigoarea mișcărilor specifice băieților.</div>
                     <div class="galerie">
                             <a href="img/repertoriu/Valea Timisului 1.jpg" data-lightbox="vt"><img src="img/repertoriu/Valea Timisului 1.jpg" /></a>
                             <a href="img/repertoriu/Valea Timisului 2.jpg" data-lightbox="vt"><img src="img/repertoriu/Valea Timisului 2.jpg" /></a>
@@ -135,7 +135,7 @@
 
                 <div class="dans">
                     <div class="titlu">Năsăud</div>
-                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="descriere" style="padding: 80px 0;"><span style="margin-left:2em">Dans</span> din podisul Transilvaniei, un continuu dialog între jocul calm și grațios al fetelor și elanul deslănțuit al băieților care-și etalează maiestria.</div>
                     <div class="galerie">
                             <a href="img/repertoriu/Nasaud 1.jpg" data-lightbox="nasaud"><img src="img/repertoriu/Nasaud 1.jpg" /></a>
                             <a href="img/repertoriu/Nasaud 3.jpg" data-lightbox="nasaud"><img src="img/repertoriu/Nasaud 3.jpg" /></a>
@@ -146,7 +146,7 @@
                 <div class="separator" style="padding-top: 20px"><hr></div>
                 <div class="dans">
                     <div class="titlu">Fecioresc</div>
-                    <div class="descriere" style="padding: 90px 0;"><span style="margin-left:2em">Dans</span> din câmpia Banatului, caracterizat printr-o desfășurare mai largă în spațiu, însotite de mișcări line.</div>
+                    <div class="descriere" style="padding: 75px 0;"><span style="margin-left:2em">Dans</span> de bărbați din toate subzonele Transilvaniei, caracterizat prin momente dinamice, o mare bogație de ritmuri, sincope și contratimpuri, creează un spectacol dinamic și plin de vigoare.</div>
                     <div class="galerie">
                             <a href="img/repertoriu/Fecioresc 1.jpg" data-lightbox="fecioresc"><img src="img/repertoriu/Fecioresc 1.jpg" /></a>
                             <a href="img/repertoriu/Fecioresc 2.jpg" data-lightbox="fecioresc"><img src="img/repertoriu/Fecioresc 2.jpg" /></a>
