admin aproape gata

--- a/site/formular_ro.html
+++ b/site/formular_ro.html
@@ -26,7 +26,7 @@
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="home_ro.html">Acasă</a></li>
-							<li role="presentation"><a href="#">Repertoriu</a></li>
+							<li role="presentation"><a href="repertoriu_ro.html">Repertoriu</a></li>
 							<li role="presentation"><a href="galerie_ro.html">Galerie</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>												
 						</ul>
