--- a/site/contact_en.html
+++ b/site/contact_en.html
@@ -18,19 +18,19 @@
         <nav class="navbar navbar-default navbar-static-top" role="banner">
             <div class="container">
                 <div class="navbar-header">
-                   <div class="navbar-brand">
-						<a href="index.html"><img src="img/dt.png" /><h1>Ansamblul folcloric "Doina Timișului"</h1></a>
-					</div>
-                </div>				
+                    <div class="navbar-brand">
+                         <a href="index.html"><img src="img/dt.png" /><h1>The folkloric ensemble "Doina Timișului"</h1></a>
+                     </div>
+                 </div>					
                 <div class="navbar-collapse collapse">							
 					<div class="menu">
-						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation"><a href="home_ro.html">Acasă</a></li>
-							<li role="presentation"><a href="repertoriu_ro.html">Repertoriu</a></li>
-							<li role="presentation"><a href="galerie_ro.html">Galerie</a></li>
-							<li role="presentation"><a href="contact_ro.html" class="active">Contact</a></li>												
-						</ul>
-					</div>
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation"><a href="home_en.html">Home</a></li>
+                            <li role="presentation"><a href="repertoriu_en.html">Choreography</a></li>
+                            <li role="presentation"><a href="galerie_en.html">Gallery</a></li>
+                            <li role="presentation"><a href="contact_en.html" class="active">Contact</a></li>						
+                        </ul>
+                    </div>
 				</div>		
             </div>
         </nav>	
@@ -45,15 +45,15 @@
         <div class="container">
 
             <div class="text-center">        
-                <h2>Lăsați-ne un mesaj</h2>
-                <p>Pentru informații suplimentare ne puteți contacta, completând formularul de mai jos!</p>
+                <h2>Leave us a message</h2>
+                <p>For further information, please contact us by filling out the form below!</p>
             </div> 
             <div class="row contact-wrap"> 
                 <div class="status alert alert-success" style="display: none"></div>
-                <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="email.php">
+                <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="email_en.php">
                     <div class="col-sm-5 col-sm-offset-1">
                         <div class="form-group">
-                            <label>Nume *</label>
+                            <label>Name *</label>
                             <input type="text" name="name" class="form-control" required="required">
                         </div>
                         <div class="form-group">
@@ -61,21 +61,21 @@
                             <input type="email" name="email" class="form-control" required="required">
                         </div>
                         <div class="form-group">
-                            <label>Telefon</label>
+                            <label>Phone</label>
                             <input type="text" name="telefon" class="form-control">
                         </div>                       
                     </div>
                     <div class="col-sm-5">
                         <div class="form-group">
-                            <label>Subiect *</label>
+                            <label>Subject *</label>
                             <input type="text" name="subject" class="form-control" required="required">
                         </div>
                         <div class="form-group">
-                            <label>Mesaj *</label>
+                            <label>Message *</label>
                             <textarea name="message" id="message" required="required" class="form-control" rows="5"></textarea>
                         </div>                        
                         <div class="form-group">
-                            <button type="submit" name="submit" class="btn btn-primary btn-lg" required="required">Trimiteți mesajul</button>
+                            <button type="submit" name="submit" class="btn btn-primary btn-lg" required="required">Send message</button>
                         </div>
                     </div>
                 </form> 
