--- a/site/home_en.html
+++ b/site/home_en.html
@@ -109,29 +109,13 @@
 	<footer>
 		<div class="container">
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-				<h4>Quick contact</h4>
-				<p>More information can be found at the Student Culture House or on the phone.</p>						
+				<h4>Contact rapid</h4>
+				<p>Mai multe informații puteți găsii la sediul Casei de Cultură a Studenților sau la telefon.</p>						
 				<div class="contact-info">
 					<ul>
 						<li><i class="fa fa-home fa"></i> Bulevardul Regele Carol I Nr. 9, Timișoara </li>
 						<li><i class="fa fa-phone fa"></i> +4 0256 496 711</li>
 					</ul>
-				</div>
-			</div>
-			
-			<div class="col-md-4 wow fadeInDown">				
-			</div>
-			
-			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">				
-				<div class="">
-					<h4>some text</h4>
-					<p>some text</p>
-					<!-- <div class="btn-gamp">		
-						<input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter Email">
-					</div>
-					<div class="btn-gamp">
-						<a type="submit" class="btn btn-default">Subscribe</a>
-					</div> -->
 				</div>
 			</div>
 		</div>	
