--- a/site/galerie_en.html
+++ b/site/galerie_en.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/animate.css" />
         <link href="css/animate.min.css" rel="stylesheet" /> 
         <link href="css/style.css" rel="stylesheet" />
+        <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" />
     </head>
 
     <body>	
@@ -27,7 +28,7 @@
                             <ul class="nav nav-tabs" role="tablist">
                                 <li role="presentation"><a href="home_en.html">Home</a></li>
                                 <li role="presentation"><a href="repertoriu_en.html">Choreography</a></li>
-                                <li role="presentation"><a href="galerie_en.html">Gallery</a></li>
+                                <li role="presentation"><a href="galerie_en.html" class="active">Gallery</a></li>
                                 <li role="presentation"><a href="contact_en.html">Contact</a></li>						
                             </ul>
                         </div>
@@ -350,29 +351,13 @@
         <footer>
             <div class="container">
                 <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                    <h4>Quick contact</h4>
-                    <p>More information can be found at the Student Culture House or on the phone.</p>						
+                    <h4>Contact rapid</h4>
+                    <p>Mai multe informații puteți găsii la sediul Casei de Cultură a Studenților sau la telefon.</p>						
                     <div class="contact-info">
                         <ul>
                             <li><i class="fa fa-home fa"></i> Bulevardul Regele Carol I Nr. 9, Timișoara </li>
                             <li><i class="fa fa-phone fa"></i> +4 0256 496 711</li>
                         </ul>
-                    </div>
-                </div>
-                
-                <div class="col-md-4 wow fadeInDown">				
-                </div>
-                
-                <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">				
-                    <div class="">
-                        <h4>some text</h4>
-                        <p>some text</p>
-                        <!-- <div class="btn-gamp">		
-                            <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter Email">
-                        </div>
-                        <div class="btn-gamp">
-                            <a type="submit" class="btn btn-default">Subscribe</a>
-                        </div> -->
                     </div>
                 </div>
             </div>	
