--- a/site/galerie_en.html
+++ b/site/galerie_en.html
@@ -26,7 +26,7 @@
                     <div class="navbar-collapse collapse">							
                         <div class="menu">
                             <ul class="nav nav-tabs" role="tablist">
-                                <li role="presentation"><a href="home_en.html">Home</a></li>
+                                <li role="presentation"><a href="home_en.php">Home</a></li>
                                 <li role="presentation"><a href="repertoriu_en.html">Choreography</a></li>
                                 <li role="presentation"><a href="galerie_en.html" class="active">Gallery</a></li>
                                 <li role="presentation"><a href="contact_en.html">Contact</a></li>						
