--- a/site/galerie_ro.html
+++ b/site/galerie_ro.html
@@ -26,7 +26,7 @@
                 <div class="navbar-collapse collapse">							
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation"><a href="home_ro.html">Acasă</a></li>
+							<li role="presentation"><a href="home_ro.php">Acasă</a></li>
 							<li role="presentation"><a href="repertoriu_ro.html">Repertoriu</a></li>
 							<li role="presentation"><a href="galerie_ro.html" class="active">Galerie</a></li>
 							<li role="presentation"><a href="contact_ro.html">Contact</a></li>						
