--- a/site/index.html
+++ b/site/index.html
@@ -21,10 +21,10 @@
         <h3 class="body-index-h3">Timișoara - România</h3>
 
         <div class="uk-flag">
-            <a href="home_en.html"><img class="uk-flag-img" src="img/uk.png" /></a>
+            <a href="home_en.php"><img class="uk-flag-img" src="img/uk.png" /></a>
             </div>
         <div class="ro-flag">
-            <a href="home_ro.html"><img class="ro-flag-img" src="img/romania.png" /></a>
+            <a href="home_ro.php"><img class="ro-flag-img" src="img/romania.png" /></a>
         </div>
 
         <div class="video-index">
