--- a/site/repertoriu_en.html
+++ b/site/repertoriu_en.html
@@ -245,8 +245,8 @@
         <footer>
             <div class="container">
                 <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                    <h4>Contact rapid</h4>
-                    <p>Mai multe informații puteți găsii la sediul Casei de Cultură a Studenților sau la telefon.</p>						
+                    <h4>Quick contact</h4>
+                    <p>More information can be found at the Student Culture House or on the phone.</p>						
                     <div class="contact-info">
                         <ul>
                             <li><i class="fa fa-home fa"></i> Bulevardul Regele Carol I Nr. 9, Timișoara </li>
